--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./components/bg.jpg);
+  background-image: url(./components/bg-RM.jpg);
   background-size: cover;
 }
 
