--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+* { box-sizing:border-box; }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,8 +7,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./components/bg.jpg);
+  background: #000;
+  /* background-image: url(./components/bg.jpg); */
   background-size: cover;
+  width: 961px;
+  margin: 0 auto;
 }
 
 code {
