--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(0deg);
-  box-shadow: 0 0 6px 2px rgba(0,0,0,0.2) ;
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.2);
   animation: loader 1s linear infinite;
 }
 
@@ -73,26 +73,9 @@
   }
 }
 
-.nav {
-  box-shadow: 0px 1px 10px 1px rgb(255,215,0);
-  /* border-bottom:1px solid goldenrod; */
-  margin-bottom: 2rem;
-} 
-
-.nav a {
-  color: gold;
-}
-
-.nav-link a{
-  color: goldenrod;
-}
-
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: #fff;
   text-align: center;
 }
-
-/* img {
-  width: 200px;
-} */
-
